@@ -1,12 +1,10 @@
-<h2>1. submit buttons</h2>
+<h2>1. submit</h2>
 
 <form>
 <p><%= submit :foo, :value => 'foo' %></p> <!-- action to call foo_action method -->
 <p><%= submit :bar, :value => 'bar' %></p> <!-- action to call bar_action method -->
+<div><%= hidden :example %></div> <!-- hack to dispatch example -->
 </form>
-
-<!-- <\!-- query is hack to dispatch example -\-> -->
-<!-- <p><%= action :foo, :query => { 'example' => req['example'] } %></p> <\!-- action to call foo_action method -\-> -->
 <!-- <p><%= action :bar, :query => { 'example' => req['example'] } %></p> <\!-- action to call bar_action method -\-> -->
 
 <h2>2. results</h2>
