@@ -1,7 +1,9 @@
 2007-06-19  TOKI Yoshinori  <toki@freedom.ne.jp>
 
 	* lib/gluon/po.rb: (Gluon::PresentationObject class) naivete
-	implementation of form control methods. text, password and submit.
+	implementation of form control methods. text, password, submit and
+	hidden.
+	
 
 2007-06-17  TOKI Yoshinori  <toki@freedom.ne.jp>
 
